[CRNT-37965] :Minor fixes to make sure Empty correspondence request doesnt break the view. Bug :CRNT-37965

--- a/html5-views-common/src/main/resources/META-INF/webapp/html5/styles/html5-views-common.css
+++ b/html5-views-common/src/main/resources/META-INF/webapp/html5/styles/html5-views-common.css
@@ -23,7 +23,8 @@
 
 .correspondence_left_section {
 	width: 100px;
-	vertical-align: top
+	vertical-align: top;
+	white-space:nowrap;
 }
 
 .correspondence_right_section {
